deploy: 51603261f66176951f1fbfb3fcb79b4adbc8ca67

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Primary Meta Tags -->
-  <title>Chromebook Unlocked Games - Free Unblocked Games for School</title>
-  <meta name="title" content="Chromebook Unlocked Games - Free Unblocked Games for School">
+  <title>Chromebook Unlocked Games - Free Unblocked Games to Play on School Chromebook</title>
+  <meta name="title" content="Chromebook Unlocked Games - Free Unblocked Games to Play on School Chromebook">
   <meta name="description" content="Play free unblocked games at school on your Chromebook. Access 100+ unlocked online games that work on school computers. No downloads required - play instantly in your browser!">
-  <meta name="keywords" content="chromebook unlocked games, unblocked games, free online games, school games, chromebook games, unblocked games at school, online games unblocked, school computer games, free games, browser games, no download games, undetected games, play games at school">
+  <meta name="keywords" content="chromebook unlocked games, unblocked games, free online games, school games, chromebook games, unblocked games at school, online games unblocked, school computer games, free games, browser games, no download games, undetected games, chromebookunlocked, play games at school">
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
   <meta name="author" content="Chromebook Unlocked Games">
@@ -16,7 +16,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://chromebookunlocked.github.io/">
-  <meta property="og:title" content="Chromebook Unlocked Games - Free Unblocked Games for School">
+  <meta property="og:title" content="Chromebook Unlocked Games - Free Unblocked Games to Play on School Chromebook">
   <meta property="og:description" content="Play free unblocked games at school on your Chromebook. Access 100+ unlocked online games that work on school computers. No downloads required!">
   <meta property="og:image" content="https://chromebookunlocked.github.io/assets/logo.png">
   <meta property="og:site_name" content="Chromebook Unlocked Games">
@@ -24,7 +24,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://chromebookunlocked.github.io/">
-  <meta property="twitter:title" content="Chromebook Unlocked Games - Free Unblocked Games for School">
+  <meta property="twitter:title" content="Chromebook Unlocked Games - Free Unblocked Games for to Play on School Chromebook">
   <meta property="twitter:description" content="Play free unblocked games at school on your Chromebook. Access 100+ unlocked online games that work on school computers. No downloads required!">
   <meta property="twitter:image" content="https://chromebookunlocked.github.io/assets/logo.png">
   
