deploy: 7d2c3a7dc594d85541251ce643d502c2c00fa55e

--- a/index.html
+++ b/index.html
@@ -832,9 +832,9 @@
       <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
     </div>
     <div class="card-title">Fireboy and Watergirl 1</div>
-  </div><div class="card game-card" data-index="31" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 2/thumbnail.jpg')">
-      <img class="thumb" src="games/Fireboy and Watergirl 2/thumbnail.jpg" alt="Fireboy and Watergirl 2">
+  </div><div class="card game-card" data-index="31" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 2/thumbnail.png')">
+      <img class="thumb" src="games/Fireboy and Watergirl 2/thumbnail.png" alt="Fireboy and Watergirl 2">
     </div>
     <div class="card-title">Fireboy and Watergirl 2</div>
   </div><div class="card game-card" data-index="32" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
