deploy: 4511c221924958da1533b3ede257cde4280b0c7e

--- a/index.html
+++ b/index.html
@@ -817,37 +817,42 @@
       <img class="thumb" src="games/Earn To Die 2/thumbnail.jpg" alt="Earn To Die 2">
     </div>
     <div class="card-title">Earn To Die 2</div>
-  </div><div class="card game-card" data-index="28" data-folder="FNAF 3" data-name="fnaf 3" onclick="prepareGame('FNAF%203','FNAF%203','games/FNAF 3/thumbnail.png')">
+  </div><div class="card game-card" data-index="28" data-folder="FNAF 1" data-name="fnaf 1" onclick="prepareGame('FNAF%201','FNAF%201','games/FNAF 1/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
+      <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1">
+    </div>
+    <div class="card-title">FNAF 1</div>
+  </div><div class="card game-card" data-index="29" data-folder="FNAF 3" data-name="fnaf 3" onclick="prepareGame('FNAF%203','FNAF%203','games/FNAF 3/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
       <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3">
     </div>
     <div class="card-title">FNAF 3</div>
-  </div><div class="card game-card" data-index="29" data-folder="FNAF 4" data-name="fnaf 4" onclick="prepareGame('FNAF%204','FNAF%204','games/FNAF 4/thumbnail.png')">
+  </div><div class="card game-card" data-index="30" data-folder="FNAF 4" data-name="fnaf 4" onclick="prepareGame('FNAF%204','FNAF%204','games/FNAF 4/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
       <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4">
     </div>
     <div class="card-title">FNAF 4</div>
-  </div><div class="card game-card" data-index="30" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="31" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
       <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
     </div>
     <div class="card-title">Fireboy and Watergirl 1</div>
-  </div><div class="card game-card" data-index="31" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.png')">
+  </div><div class="card game-card" data-index="32" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 2/thumbnail.png')">
       <img class="thumb" src="games/Fireboy and Watergirl 2/thumbnail.png" alt="Fireboy and Watergirl 2">
     </div>
     <div class="card-title">Fireboy and Watergirl 2</div>
-  </div><div class="card game-card" data-index="32" data-folder="Fireboy and Watergirl 3" data-name="fireboy and watergirl 3" onclick="prepareGame('Fireboy%20and%20Watergirl%203','Fireboy%20and%20Watergirl%203','games/Fireboy and Watergirl 3/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="33" data-folder="Fireboy and Watergirl 3" data-name="fireboy and watergirl 3" onclick="prepareGame('Fireboy%20and%20Watergirl%203','Fireboy%20and%20Watergirl%203','games/Fireboy and Watergirl 3/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 3/thumbnail.jpg')">
       <img class="thumb" src="games/Fireboy and Watergirl 3/thumbnail.jpg" alt="Fireboy and Watergirl 3">
     </div>
     <div class="card-title">Fireboy and Watergirl 3</div>
-  </div><div class="card game-card" data-index="33" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+  </div><div class="card game-card" data-index="34" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="34" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="35" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
