--- a/index.html
+++ b/index.html
@@ -837,27 +837,32 @@
       <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4">
     </div>
     <div class="card-title">FNAF 4</div>
-  </div><div class="card game-card" data-index="32" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="32" data-folder="FNAF Pizzeria Simulator" data-name="fnaf pizzeria simulator" onclick="prepareGame('FNAF%20Pizzeria%20Simulator','FNAF%20Pizzeria%20Simulator','games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+      <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator">
+    </div>
+    <div class="card-title">FNAF Pizzeria Simulator</div>
+  </div><div class="card game-card" data-index="33" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
       <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
     </div>
     <div class="card-title">Fireboy and Watergirl 1</div>
-  </div><div class="card game-card" data-index="33" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.png')">
+  </div><div class="card game-card" data-index="34" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 2/thumbnail.png')">
       <img class="thumb" src="games/Fireboy and Watergirl 2/thumbnail.png" alt="Fireboy and Watergirl 2">
     </div>
     <div class="card-title">Fireboy and Watergirl 2</div>
-  </div><div class="card game-card" data-index="34" data-folder="Fireboy and Watergirl 3" data-name="fireboy and watergirl 3" onclick="prepareGame('Fireboy%20and%20Watergirl%203','Fireboy%20and%20Watergirl%203','games/Fireboy and Watergirl 3/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="35" data-folder="Fireboy and Watergirl 3" data-name="fireboy and watergirl 3" onclick="prepareGame('Fireboy%20and%20Watergirl%203','Fireboy%20and%20Watergirl%203','games/Fireboy and Watergirl 3/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 3/thumbnail.jpg')">
       <img class="thumb" src="games/Fireboy and Watergirl 3/thumbnail.jpg" alt="Fireboy and Watergirl 3">
     </div>
     <div class="card-title">Fireboy and Watergirl 3</div>
-  </div><div class="card game-card" data-index="35" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+  </div><div class="card game-card" data-index="36" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="36" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="37" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
