--- a/index.html
+++ b/index.html
@@ -877,7 +877,12 @@
       <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite">
     </div>
     <div class="card-title">Geometry Dash Lite</div>
-  </div><div class="card game-card" data-index="40" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="40" data-folder="Granny" data-name="granny" onclick="prepareGame('Granny','Granny','games/Granny/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
+      <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny">
+    </div>
+    <div class="card-title">Granny</div>
+  </div><div class="card game-card" data-index="41" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
