--- a/index.html
+++ b/index.html
@@ -882,7 +882,12 @@
       <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny">
     </div>
     <div class="card-title">Granny</div>
-  </div><div class="card game-card" data-index="41" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="41" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
+      <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
+    </div>
+    <div class="card-title">Happy Wheels</div>
+  </div><div class="card game-card" data-index="42" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
