--- a/index.html
+++ b/index.html
@@ -852,9 +852,9 @@
       <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
     </div>
     <div class="card-title">Fireboy and Watergirl 1</div>
-  </div><div class="card game-card" data-index="35" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 2/thumbnail.png')">
-      <img class="thumb" src="games/Fireboy and Watergirl 2/thumbnail.png" alt="Fireboy and Watergirl 2">
+  </div><div class="card game-card" data-index="35" data-folder="Fireboy and Watergirl 2" data-name="fireboy and watergirl 2" onclick="prepareGame('Fireboy%20and%20Watergirl%202','Fireboy%20and%20Watergirl%202','games/Fireboy and Watergirl 2/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Fireboy and Watergirl 2/thumbnail.jpg" alt="Fireboy and Watergirl 2">
     </div>
     <div class="card-title">Fireboy and Watergirl 2</div>
   </div><div class="card game-card" data-index="36" data-folder="Fireboy and Watergirl 3" data-name="fireboy and watergirl 3" onclick="prepareGame('Fireboy%20and%20Watergirl%203','Fireboy%20and%20Watergirl%203','games/Fireboy and Watergirl 3/thumbnail.jpg')">
