deploy: 404b2252cb9950cdae0278e38b7d744cea5b1cc1

--- a/index.html
+++ b/index.html
@@ -867,9 +867,9 @@
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="38" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.png')">
-      <img class="thumb" src="games/Fruit Ninja/thumbnail.png" alt="Fruit Ninja">
+  </div><div class="card game-card" data-index="38" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
+      <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja">
     </div>
     <div class="card-title">Fruit Ninja</div>
   </div><div class="card game-card" data-index="39" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
