deploy: faa1b92b914fcab2801d61621ba7e00f12cbb4e6

--- a/index.html
+++ b/index.html
@@ -919,9 +919,9 @@
       <img class="thumb" src="games/Fireboy and Watergirl 2/thumbnail.png" alt="Fireboy and Watergirl 2">
     </div>
     <div class="card-title">Fireboy and Watergirl 2</div>
-  </div><div class="card game-card" data-index="36" data-folder="Fireboy and Watergirl 3" data-name="fireboy and watergirl 3" onclick="prepareGame('Fireboy%20and%20Watergirl%203','Fireboy%20and%20Watergirl%203','games/Fireboy and Watergirl 3/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 3/thumbnail.jpg')">
-      <img class="thumb" src="games/Fireboy and Watergirl 3/thumbnail.jpg" alt="Fireboy and Watergirl 3">
+  </div><div class="card game-card" data-index="36" data-folder="Fireboy and Watergirl 3" data-name="fireboy and watergirl 3" onclick="prepareGame('Fireboy%20and%20Watergirl%203','Fireboy%20and%20Watergirl%203','games/Fireboy and Watergirl 3/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 3/thumbnail.png')">
+      <img class="thumb" src="games/Fireboy and Watergirl 3/thumbnail.png" alt="Fireboy and Watergirl 3">
     </div>
     <div class="card-title">Fireboy and Watergirl 3</div>
   </div><div class="card game-card" data-index="37" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
