deploy: 64599a2de65704c1986764a73d70ea2ddcf3af0c

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
     <header onclick="goToHome()"><img src="assets/logo.png" alt="Logo"></header>
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
-      <li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li>
+      <li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('2 Player')">2 Player</li>
     </ul>
   </div>
 
@@ -884,42 +884,37 @@
       <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location">
     </div>
     <div class="card-title">FNAF Sister Location</div>
-  </div><div class="card game-card" data-index="29" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
-      <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
-    </div>
-    <div class="card-title">Fireboy and Watergirl 1</div>
-  </div><div class="card game-card" data-index="30" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+  </div><div class="card game-card" data-index="29" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="31" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="30" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
       <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja">
     </div>
     <div class="card-title">Fruit Ninja</div>
-  </div><div class="card game-card" data-index="32" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
+  </div><div class="card game-card" data-index="31" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
       <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite">
     </div>
     <div class="card-title">Geometry Dash Lite</div>
-  </div><div class="card game-card" data-index="33" data-folder="Granny" data-name="granny" onclick="prepareGame('Granny','Granny','games/Granny/thumbnail.png')">
+  </div><div class="card game-card" data-index="32" data-folder="Granny" data-name="granny" onclick="prepareGame('Granny','Granny','games/Granny/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
       <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny">
     </div>
     <div class="card-title">Granny</div>
-  </div><div class="card game-card" data-index="34" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="33" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="35" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="34" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="36" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="35" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
@@ -999,6 +994,16 @@
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
     </div>
     <div class="card-title">Clear Vision 5</div>
+  </div>
+          </div>
+        </div><div class="category" data-category="2 Player">
+          <h2>2 Player</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
+      <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
+    </div>
+    <div class="card-title">Fireboy and Watergirl 1</div>
   </div>
           </div>
         </div>
